2007-10-28  Murray Cumming  <murrayc@murrayc.com>

	* goocanvas/src/canvas.hg:
	* goocanvas/src/item.hg: Make the properties public, 
	not protected.

2007-10-25  Murray Cumming  <murrayc@murrayc.com>

	* goocanvas/src/canvas.ccg:
	* goocanvas/src/canvas.hg: Added get_bounds(Bounds&) 
	method overload.

0.3.0:

2007-10-23  Murray Cumming  <murrayc@murrayc.com>

	* goocanvas/src/canvas.hg: Wrapped the properties.

2007-10-22  Murray Cumming  <murrayc@murrayc.com>

	* goocanvas/src/image.hg: Added a create() method to 
	match the new constructor added inthe last commit.

2007-10-22  Murray Cumming  <murrayc@murrayc.com>

	* goocanvas/src/image.hg: Added default values for the 
	constructors and made them explicit.

2007-10-22  Murray Cumming  <murrayc@murrayc.com>

	* goocanvas/src/ellipsemodel.hg:
	* goocanvas/src/image.hg:
	* goocanvas/src/imagemodel.hg:
	* goocanvas/src/rectmodel.hg:
	* goocanvas/src/textmodel.hg: Fixed some more minor 
	whitespace syntax that was annoying me.

2007-10-19  Murray Cumming  <murrayc@murrayc.com>

	* goocanvas/src/canvas.hg:
	* goocanvas/src/item.hg: Added refreturn to get_style().
	* tools/m4/convert_libgoocanvasmm.m4:
	Moved signal-specific conversions to the .hg files to 
	avoid accidental use for non-signals.

2007-10-17  Murray Cumming  <murrayc@murrayc.com>

	* configure.in:
	* examples/Makefile.am:
	* examples/text/window.cc:
	* examples/text/window.h: A new example to show 
	the behaviour of text items.
	* goocanvas/src/itemsimple.hg: Added some properties.
	* goocanvas/src/text.hg: Removed the font and 
	font-desc properties that are in ItemSimple instead.
	Added the wrap property.

0.2.0:

2007-10-16  Murray Cumming  <murrayc@murrayc.com>

	* examples/: Renamed .hh files to .h, for consistency 
	with other *mm libraries.

2007-10-16  Murray Cumming  <murrayc@murrayc.com>

	* Renamed the directories (and installed 
	header locations) to goocanvasmm from libgoocanvasmm, 
	to be consisten with other *mm libraries.
