@@ -1,5 +1,5 @@
 include $(top_srcdir)/examples/Makefile.am_fragment
 
-noinst_PROGRAMS = moving_shapes
-moving_shapes_SOURCES = main.cc window.cc window.h
+noinst_PROGRAMS = example
+example_SOURCES = main.cc window.cc window.h
 
