@@ -1,6 +1,6 @@
 
 #include <gtkmm.h>
-#include "window.h"
+#include "examplewindow.h"
 
 int
 main(int argc, char* argv[])
@@ -8,7 +8,7 @@ main(int argc, char* argv[])
   Gtk::Main app(&argc, &argv) ;
   Goocanvas::init("goocanvasmm Simple Example", "0.1", argc, argv) ;
 
-  SimpleWindow sw ;
+  ExampleWindow sw ;
   Gtk::Main::run(sw) ;
 }
 
