@@ -1,0 +1,46 @@
+/* Copyright (C) 1998-2006 The gtkmm Development Team
+ *
+ * This library is free software; you can redistribute it and/or
+ * modify it under the terms of the GNU Library General Public
+ * License as published by the Free Software Foundation; either
+ * version 2 of the License, or (at your option) any later version.
+ *
+ * This library is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+ * Library General Public License for more details.
+ *
+ * You should have received a copy of the GNU Library General Public
+ * License along with this library; if not, write to the Free
+ * Software Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
+ */
+
+
+#include <goocanvasmm/group.h>
+
+_DEFS(goocanvasmm,libgoocanvas)
+
+namespace Goocanvas
+{
+
+class Table : public Goocanvas::Group
+{
+  _CLASS_GOBJECT(Table, GooCanvasTable, GOO_CANVAS_TABLE, Goocanvas::Group, GooCanvasGroup)
+protected:
+  explicit Table();
+  _IGNORE(goo_table_new)
+
+public:
+
+  _WRAP_CREATE()
+
+  _WRAP_PROPERTY("width", double)
+  _WRAP_PROPERTY("height", double)
+  _WRAP_PROPERTY("row-spacing", double)
+  _WRAP_PROPERTY("column-spacing", double)
+  _WRAP_PROPERTY("homogeneous-rows", bool)
+  _WRAP_PROPERTY("homogeneous-columns", bool)
+};
+
+} //namespace Goocanvas
+
